--- a/src/components/CommentList.css
+++ b/src/components/CommentList.css
@@ -20,5 +20,6 @@
     padding: calc(3px + 0.5vw) calc(5px + 0.8vw);
     margin-bottom: calc(5px + 1vw);
     font-size: calc(5px + 2.5vw);
+    border-radius: 1.1vw;
   }
 }
